<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_calendar_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#7e7e7e"
            android:layout_marginLeft="10dp"
            android:text="@string/date_pick_calendar_sunday" />

        <TextView
            android:id="@+id/txt_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#7e7e7e"
            android:text="@string/date_pick_calendar_monday" />

        <TextView
            android:id="@+id/txt_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#7e7e7e"
            android:text="@string/date_pick_calendar_tuesday" />

        <TextView
            android:id="@+id/txt_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#7e7e7e"
            android:gravity="center"
            android:text="@string/date_pick_calendar_wednesday" />

        <TextView
            android:id="@+id/txt_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#7e7e7e"
            android:gravity="center"
            android:text="@string/date_pick_calendar_thursday" />

        <TextView
            android:id="@+id/txt_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#7e7e7e"
            android:gravity="center"
            android:text="@string/date_pick_calendar_friday" />

        <TextView
            android:id="@+id/txt_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#7e7e7e"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/date_pick_calendar_saturday" />
    </LinearLayout>

</LinearLayout>