<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_calendar_week"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:text="@string/calendar_sunday"
            android:textColor="@color/week_item_txt_sunday" />

        <TextView
            android:id="@+id/txt_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_monday"
            android:textColor="@color/week_item_txt_work_day" />

        <TextView
            android:id="@+id/txt_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_tuesday"
            android:textColor="@color/week_item_txt_work_day" />

        <TextView
            android:id="@+id/txt_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_wednesday"
            android:textColor="@color/week_item_txt_work_day" />

        <TextView
            android:id="@+id/txt_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_thursday"
            android:textColor="@color/week_item_txt_work_day" />

        <TextView
            android:id="@+id/txt_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_friday"
            android:textColor="@color/week_item_txt_work_day" />

        <TextView
            android:id="@+id/txt_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calendar_saturday"
            android:layout_marginRight="1dp"
            android:textColor="@color/week_item_txt_saturday" />
    </LinearLayout>

    <View
        android:id="@+id/horizontal_line_one"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/linear_calendar_week"
        android:background="@color/week_bottom_line" />

</RelativeLayout>