<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/view_setting_title_bar" />

    <RelativeLayout
        android:id="@+id/user_restore_page1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="32dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/user_restore_page1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="3dp"
            android:textStyle="bold"
            android:ems="8"
            android:lines="2"
            android:text="@string/lbl_data_reback_text" >
        </TextView>

        <TextView
            android:id="@+id/user_restore_page1_text_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_restore_page1_text"
            android:layout_marginBottom="48dp"
            android:textStyle="bold"
            android:ems="8"
            android:text="@string/lbl_user1_mail"
            android:textColor="@color/cue_title" >
        </TextView>

        <EditText
            android:id="@+id/user_restore_page1_txtMail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/user_restore_page1_text_mail"
            android:background="@null"
            android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@_+-–/"
            android:ems="8"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/hint_mail" >
        </EditText>
    </RelativeLayout>

    <View
        android:id="@+id/restore_set_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_line" />

    <RelativeLayout
        android:id="@+id/user_restore_page1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="28dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/user_restore_page1_text_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:textStyle="bold"
            android:ems="8"
            android:text="@string/lbl_user3_psw1"
            android:textColor="@color/cue_title" >
        </TextView>

        <EditText
            android:id="@+id/user_restore_page1_txt_psw"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/user_restore_page1_text_psw"
            android:background="@null"
            android:maxLength="30"
            android:inputType="textPassword"
            android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@_！#￥%*：？、"
            android:ems="8"
            android:singleLine="true"
            android:hint="@string/hint_code" >
        </EditText>
    </RelativeLayout>

    <View
        android:id="@+id/restore_set_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cut_line" />

    

</LinearLayout>
